début avancé des évenements Tenant

--- a/Occasional touristic rentals/nbproject/project.properties
+++ b/Occasional touristic rentals/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Occasional_touristic_rentals
-main.class=MainClass.OccasionalTouristicRentals
+main.class=mainapp.OccasionalTouristicRentals
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
