--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java
 /Occasional touristic rentals/nbproject/private/
+/Occasional touristic rentals/build/
